Version ClaSS-0.9.25 release (2010/9/1)
-----------------------------------------

Included spellcheck for tinyMCE.

Enrolment assessments now part of the studentfields for listing in
InfoBook.

Make login to eportfolio in hidden iframe suitable for access to
student report archive.

Moved the studentlist table row extra div out to an include.

Targets tick added but no targets entry yet.


Version ClaSS-0.9.24 release (2010/8/25)
-----------------------------------------

Changed the epf fileurl function to be epf_list_files.

Made use of epf_list_files for the InfoBook's student_reports page.

Fixed list_assessment_profiles to use multiple courses.

Student lists for buses using transport_print.

Added contact address to student extra display fields.

Transport groups now part Info search.

Removed table cridbid in favour of using component. Allows adding
seqeunce to course subjects and also added weighting.

Transition all old scripts still using cribid to use curriculum
functions.

Replaced deprecated php function split with explode.

Saved views in the InfoBook student_list. Uses a new categorydef
type='col' to store the tagnames on display.

Added a weight field to eidsid which is only currently reflected in
Assessments as weight=2 for double valued subjects.

Fixed import students to detect blank enrolment numbers and avoid.


Version ClaSS-0.9.23 release (2010/8/16)
-----------------------------------------

New installation script for the transport book tables.

Start on adding transport scripts to Admin.

New student_transport link in InfoBook.

Removed configure access to budgets for administrators (use special
admin permissions instead).

Added tiny_mce package under lib. Included an init to onload js
function for textareas with class="htmleditorarea".

Changed the message script to use tiny_mce when emailing.

Improved send_email_to function so it can handle html for pearmail.

Improved js loadRequired function so it better handles class names.
